--- a/Aplicacao_01/Views/Shared/_Layout.cshtml
+++ b/Aplicacao_01/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Formacao" asp-action="Index">Nossas Formações</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Curso" asp-action="Index">Nossos Cursos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
